# nagios-avdesk-plugin

./: CMakeLists.txt  LICENSE  README.md  common.h  config.h.cmake  main.c  platform.h.cmake  version.h.cmake
